extract data column to table. refactored api
