# generated/openapi/types.go
@@ -3,10 +3,6 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
 package openapi
 
-import (
-	openapi_types "github.com/oapi-codegen/runtime/types"
-)
-
 const (
 	AuthScopes = "auth.Scopes"
 )
@@ -21,22 +17,18 @@ const (
 
 // CreateSensitiveRecordRequest defines model for CreateSensitiveRecordRequest.
 type CreateSensitiveRecordRequest struct {
-	Data     openapi_types.File      `json:"data"`
 	Metadata string                  `json:"metadata"`
 	Type     SensitiveRecordTypeEnum `json:"type"`
 }
 
 // CreateSensitiveRecordResponse defines model for CreateSensitiveRecordResponse.
-type CreateSensitiveRecordResponse = SensitiveRecordWithData
+type CreateSensitiveRecordResponse = SensitiveRecord
 
 // ErrorResponse defines model for ErrorResponse.
 type ErrorResponse struct {
 	// Errors errors must split by \r symbol
 	Errors string `json:"errors"`
 }
-
-// GetSensitiveRecordResponse defines model for GetSensitiveRecordResponse.
-type GetSensitiveRecordResponse = SensitiveRecordWithData
 
 // ListSensitiveRecordResponse defines model for ListSensitiveRecordResponse.
 type ListSensitiveRecordResponse struct {
@@ -81,14 +73,6 @@ type SensitiveRecordType struct {
 
 // SensitiveRecordTypeEnum defines model for SensitiveRecordTypeEnum.
 type SensitiveRecordTypeEnum string
-
-// SensitiveRecordWithData defines model for SensitiveRecordWithData.
-type SensitiveRecordWithData struct {
-	Data     openapi_types.File      `json:"data"`
-	Id       int                     `json:"id"`
-	Metadata string                  `json:"metadata"`
-	Type     SensitiveRecordTypeEnum `json:"type"`
-}
 
 // PostLoginJSONRequestBody defines body for PostLogin for application/json ContentType.
 type PostLoginJSONRequestBody = LoginUserRequest
